# eeg_fw_cpuapp

./: .gitignore  CMakeLists.txt  README.md  format.sh  prj.conf
boards/arm/eeg_nrf5340/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  eeg_nrf5340_cpuapp.dts  eeg_nrf5340_cpuapp.yaml  eeg_nrf5340_cpuapp_defconfig  eeg_nrf5340_cpuapp_ns.dts  eeg_nrf5340_cpuapp_ns.yaml  eeg_nrf5340_cpuapp_ns_defconfig  eeg_nrf5340_cpunet-pinctrl.dtsi  eeg_nrf5340_cpunet.dts  eeg_nrf5340_cpunet.yaml  eeg_nrf5340_cpunet_defconfig  nrf5340_cpuapp_common-pinctrl.dtsi  nrf5340_cpuapp_common.dtsi  nrf5340_cpuapp_partition_conf.dtsi  nrf5340_cpunet_reset.c
bosch_bmi270_driver/zephyr/: CMakeLists.txt  Kconfig  bmi270.c  bmi270_spi.c  bmi270_trigger.c
src/: bluetooth.c  bluetooth.h  bmi270.c  eeg.c  filter.c  filter.h  hhs_util.h  main.c
ti_ads1299_driver/dts/bindings/: ti,ads1299.yaml
ti_ads1299_driver/zephyr/: CMakeLists.txt  Kconfig  ti_ads1299_driver_spi.c  ti_ads1299_driver_spi.h
